removed certain image files and re added some

--- a/gallery.html
+++ b/gallery.html
@@ -94,23 +94,23 @@ div.desc {
 </style>
 
 
-<p style='font-size:30px;margin-top:100px;margin-left:6px;'>Main Menu design's</p>
-
-<div class="responsiver">
-  <div class="gallery">
-    <a target="_blank" href="ui v11.jpg">
-      <img src="ui v11.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Original Main Menu Design</div>
-  </div>
-</div>
+<p style='font-size:30px;margin-top:100px;margin-left:6px;'>Main Menu Designs</p>
 
 <div class="responsiver">
   <div class="gallery">
     <a target="_blank" href="ui 1 v5 with blur.jpg">
       <img src="ui 1 v5 with blur.jpg" width="600" height="400">
     </a>
-    <div class="desc">New Main Menu Design</div>
+    <div class="desc">Main Menu v1 (me)</div>
+  </div>
+</div>
+
+<div class="responsiver">
+  <div class="gallery">
+    <a target="_blank" href="falz_main_menu_design.jpg">
+      <img src="falz_main_menu_design.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Main Menu UI v2 (@Falz - Colleague)</div>
   </div>
 </div>
 
@@ -123,14 +123,23 @@ div.desc {
 <br></br>
 <br></br>
 <br></br>
-<p class='gallerh' style='font-size:30px;margin-left:6px;'>Score Board Designs</p>
+<p class='gallerh' style='font-size:30px;margin-left:6px;'>Server Browser Designs</p>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="over_game_score.jpg">
-      <img src="over_game_score.jpg" width="600" height="400">
+    <a target="_blank" href="server browser ui export 3.jpg">
+      <img src="server browser ui export 3.jpg" width="600" height="400">
     </a>
-    <div class="desc">Main Score Board Design Concept 1 (Attrition)</div>
+    <div class="desc">Server Browser UI v1 (me)</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="server browser ui changed v2.jpg">
+      <img src="server browser ui changed v2.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Server Browser UI v2 (me)</div>
   </div>
 </div>
 
