--- a/gallery.html
+++ b/gallery.html
@@ -123,7 +123,7 @@ div.desc {
 <br></br>
 <br></br>
 <br></br>
-<p class='gallerh' style='font-size:30px;margin-left:6px;'>Server Browser Designs</p>
+<p class='gallerh' style='font-size:30px;margin-left:6px;'>Main Server Browser Designs</p>
 
 <div class="responsive">
   <div class="gallery">
@@ -140,6 +140,44 @@ div.desc {
       <img src="server browser ui changed v2.jpg" width="600" height="400">
     </a>
     <div class="desc">Server Browser UI v2 (me)</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="server browser dark export.jpg">
+      <img src="server browser dark export.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Server Browser UI v3 (me)</div>
+  </div>
+</div>
+
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<p class='gallerh' style='font-size:30px;margin-left:6px;'>MISC Server Browser Designs</p>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="server browser selected ui v3.jpg">
+      <img src="server browser selected ui v3.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Server Browser UI v2 selected (me)</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="server browser filters export.jpg">
+      <img src="server browser filters export.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Server Browser UI v2 filter (me)</div>
   </div>
 </div>
 
