added image to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -145,8 +145,8 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="server browser dark export.jpg">
-      <img src="server browser dark export.jpg" width="600" height="400">
+    <a target="_blank" href="server browser dark v2.jpg">
+      <img src="server browser dark v2.jpg" width="600" height="400">
     </a>
     <div class="desc">Server Browser UI v3 (me)</div>
   </div>
