added images and updated projects

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
     <br></br>
 
-    During this time, I have made use of all the spare hours i have had and sat down and programmed. Needless to say, i think it was very fruitful. I have made a UI for a calculator, made some text-based games, solved some problems and made my first python library.
+    During this time, I have made use of all the spare hours i have had and sat down and programmed. I have started and completed a Python Library and made this website!
 
     <br></br>
 
-    After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I love designing things and of course, I love Titanfall, so started suggesting ideas and contributing to #ui on the Project Vanguard discord server. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am hoping i cant get it :D
+    After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
   </p>
 </div>
 
@@ -66,7 +66,6 @@
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen 0.1.1</p>
           <p class="card_text">A library for generating strong randomised passwords</p>
           <div class='project-demo-button'>
-            <a href="https://replit.com/@lunArcreator/Project-Demo-Pw-gen#main.py" style="font-size: 15px;" target="_blank">Project Demo</a>
             <a href="https://github.com/lunAr-creator/pw-gen" style="font-size: 15px;" target="_blank">GitHub</a>
           </div>
         </div>
@@ -74,12 +73,12 @@
     </li>
     <li class="cards_item">
       <div class="card">
-        <div class="card_image"><img src="logovan.png"></div>
+        <div class="card_image"><img src="project2pic.png"></div>
         <div class="card_content">
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Project Vanguard UI</p>
-          <p class="card_text">UI concepts for Project Vanguard</p>
+          <p class="card_text">UI and HUD concepts for Project Vanguard</p>
           <div class='project-demo-button'>
-            <a href="gallery.html" style="font-size:15px;" target="_blank">Images</a>
+            <a href="gallery.html" style="font-size:15px;" target="_blank">Concepts</a>
             <!-- <a href="default.asp" style="font-size:15px;" target="_blank">GitHub</a> -->
           </div>
         </div>
@@ -93,8 +92,43 @@
   <hr/>
   <p>
   </p>
-</div> -->
+  <div class="fcf-body">
 
+    <div id="fcf-form">
+
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+        
+        <div class="fcf-form-group">
+            <label for="Name" class="fcf-label">Your name</label>
+            <div class="fcf-input-group">
+                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
+            </div>
+        </div>
+
+        <div class="fcf-form-group">
+            <label for="Email" class="fcf-label">Your email address</label>
+            <div class="fcf-input-group">
+                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
+            </div>
+        </div>
+
+        <div class="fcf-form-group">
+            <label for="Message" class="fcf-label">Your message</label>
+            <div class="fcf-input-group">
+                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+            </div>
+        </div>
+
+        <div class="fcf-form-group">
+            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send Message</button>
+        </div>
+
+    </form>
+    </div>
+
+</div>
+</div>
+ -->
 <br></br>
 <div class='footer'>
   <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
