--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <p class="card_text">A library for generating strong randomised passwords</p>
           <div class='project-demo-button'>
             <a href="https://github.com/lunAr-creator/pw-gen" style="font-size: 15px;" target="_blank">GitHub</a>
+            <a href="https://pypi.org/project/pw-gen/" style="font-size: 15px;" target="_blank">PyPi</a>
           </div>
         </div>
       </div>
