--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
     <a href="#home" onclick="navbarFunc()">Home</a>
     <a href="#about" onclick="navbarFunc()">About</a>
     <a href="#projects" onclick="navbarFunc()">Projects</a>
-<!--     <a href="#contact" onclick="navbarFunc()">Contact</a> -->
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
     </label>
   </ul>
 </div>
 
+<!-- <div style="height: 250px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C137.97,265.95 271.49,-49.98 500.84,83.38 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: #AEC6CF;"></path></svg></div> -->
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#AEC6CF" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,277.3C480,245,600,171,720,165.3C840,160,960,224,1080,234.7C1200,245,1320,203,1380,181.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
 <script src="app.js"></script>
 
 <div class="main" id="about" id="startchange">
@@ -72,71 +74,14 @@
         </div>
       </div>
     </li>
-    <li class="cards_item">
-      <div class="card">
-        <div class="card_image"><img src="project2pic.png"></div>
-        <div class="card_content">
-          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Project Vanguard UI</p>
-          <p class="card_text">UI and HUD concepts for Project Vanguard</p>
-          <div class='project-demo-button'>
-            <a href="gallery.html" style="font-size:15px;" target="_blank">Concepts</a>
-            <!-- <a href="default.asp" style="font-size:15px;" target="_blank">GitHub</a> -->
-          </div>
-        </div>
-      </div>
-    </li>
 </div>
 </div>
 
-<!-- <div class="main headers" id="contact">
-  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size:30px;' class="fas fa-pen"></i>Contact</p>
-  <hr/>
-  <p>
-  </p>
-  <div class="fcf-body">
-
-    <div id="fcf-form">
-
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
-        
-        <div class="fcf-form-group">
-            <label for="Name" class="fcf-label">Your name</label>
-            <div class="fcf-input-group">
-                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
-            </div>
-        </div>
-
-        <div class="fcf-form-group">
-            <label for="Email" class="fcf-label">Your email address</label>
-            <div class="fcf-input-group">
-                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
-            </div>
-        </div>
-
-        <div class="fcf-form-group">
-            <label for="Message" class="fcf-label">Your message</label>
-            <div class="fcf-input-group">
-                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
-            </div>
-        </div>
-
-        <div class="fcf-form-group">
-            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send Message</button>
-        </div>
-
-    </form>
-    </div>
-
-</div>
-</div>
- -->
 <br></br>
 <div class='footer'>
   <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
   <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow" style='font-size:35px'></i></a>
   <a href="https://www.instagram.com/_somab_/" target="_blank"><i class="fab fa-instagram" style='font-size:35px;margin-left:20px;'></i></a>
-  <br></br>
-  <p style="font-size: 16px;">Copyright © 2021 lunAr-creator - Website Design by me (who else? :D)</p>
 </div>
 
 </body>
