--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="header" id='pronav'>
   <div class='logo' id='logo'>
-    <p style='font-size:35px;'>lunAr-creator</p>
+    <p style='font-size:35px;'><a href="index.html" style="text-decoration:none;color:black;">lunAr-creator</a></p>
   </div>
   <input type="checkbox" id="chk">
   <label for="chk" class="show-menu-btn" id='hamburger'>
@@ -31,9 +31,7 @@
   </ul>
 </div>
 
-<!-- <div style="height: 250px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C137.97,265.95 271.49,-49.98 500.84,83.38 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: #AEC6CF;"></path></svg></div> -->
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#AEC6CF" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,277.3C480,245,600,171,720,165.3C840,160,960,224,1080,234.7C1200,245,1320,203,1380,181.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#D8D9DE" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,277.3C480,245,600,171,720,165.3C840,160,960,224,1080,234.7C1200,245,1320,203,1380,181.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
 <script src="app.js"></script>
 
 <div class="main" id="about" id="startchange">
