--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel='stylesheet' href='style.css'>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-  <link rel="shortcut icon" href="C:\Users\sbenf\Desktop\my_portfolio\logo.ico">
+  <link rel="icon" href="C:\Users\sbenf\Desktop\my_portfolio\logo.ico">
   <meta charset="utf-8"/>
 </head>
 <body>
@@ -31,7 +31,7 @@
   </ul>
 </div>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#D8D9DE" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,277.3C480,245,600,171,720,165.3C840,160,960,224,1080,234.7C1200,245,1320,203,1380,181.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none"><path fill="#D8D9DE" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,277.3C480,245,600,171,720,165.3C840,160,960,224,1080,234.7C1200,245,1320,203,1380,181.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
 <script src="app.js"></script>
 
 <div class="main" id="about" id="startchange">
@@ -68,6 +68,19 @@
           <div class='project-demo-button'>
             <a href="https://github.com/lunAr-creator/pw-gen" style="font-size: 15px;" target="_blank">GitHub</a>
             <a href="https://pypi.org/project/pw-gen/" style="font-size: 15px;" target="_blank">PyPi</a>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="pjvw.png"></div>
+        <div class="card_content">
+          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Project Vanguard Website</p>
+          <p class="card_text">The Website for the game Project Vanguard</p>
+          <div class='project-demo-button'>
+            <a href="https://github.com/lunAr-creator/Project-Vanguard-Website" style="font-size: 15px;" target="_blank">GitHub</a>
+            <a href="https://project-vanguard.netlify.app" style="font-size: 15px;" target="_blank">Live</a>
           </div>
         </div>
       </div>
