removed image for speed

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     </li>
     <li class="cards_item">
       <div class="card">
-        <div class="card_image"><img src="pjvw.png"></div>
+        <div class="card_image"><img src="https://i.ibb.co/tzhR2D8/pjvw.png"></div>
         <div class="card_content">
-          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Project Vanguard Website</p>
+          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Game Website</p>
           <p class="card_text">The Website for the game Project Vanguard</p>
           <div class='project-demo-button'>
             <a href="https://github.com/lunAr-creator/Project-Vanguard-Website" style="font-size: 15px;" target="_blank">GitHub</a>
