--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-<title>lunAr-creator</title>
+<title>Numens</title>
 <div class="bg" id='home'></div>
 
 <div class="header" id='pronav'>
   <div class='logo' id='logo'>
-    <p style='font-size:35px;'><a href="index.html" style="text-decoration:none;color:black;">lunAr-creator</a></p>
+    <p style='font-size:35px;'><a href="index.html" style="text-decoration:none;color:black;">Numens :D</a></p>
   </div>
   <input type="checkbox" id="chk">
   <label for="chk" class="show-menu-btn" id='hamburger'>
