--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<title>Numens</title>
+<title>Numens - Portfolio</title>
 <div class="bg" id='home'></div>
 
 <div class="header" id='pronav'>
