--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul class="menu" id='navbar'>
-    <a href="#home" id="link1" onclick="navbarFunc()" onmouseover="changeToBlueColor()" onmouseout="changeToBlackColor()">Home</a>
+    <a href="#home" id="link1" onclick="navbarFunc()">Home</a>
     <a href="#about" id="link2" onclick="navbarFunc()">About</a>
     <a href="#projects" id="link3" onclick="navbarFunc()">Projects</a>
     <label for="chk" class="hide-menu-btn">
