--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
 
 <title>LunAr-Creator - Portfolio</title>
-<div class="bg" id='home'></div>
+
+<div class="header_image">
+  <div class="bg" id='home'></div>
+</div>
 <div class="header" id='pronav'>
   <div class='logo' id='logo'>
     <p style='font-size:35px;'><a href="index.html" class="logo_text" id="log_text">lunAr-creator</a></p>
@@ -32,6 +35,7 @@
 
 <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none"><path fill="#D8D9DE" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,277.3C480,245,600,171,720,165.3C840,160,960,224,1080,234.7C1200,245,1320,203,1380,181.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg> -->
 <script src="app.js"></script>
+
 
 <div class="main" id="about" id="startchange">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
