--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <title>LunAr-Creator - Portfolio</title>
 
-<div class="header_image">
+<!-- <div class="header_image">
   <div class="bg" id='home'></div>
-</div>
+</div> -->
+<div id="home"></div>
 <div class="header" id='pronav'>
   <div class='logo' id='logo'>
-    <p style='font-size:35px;'><a href="index.html" class="logo_text" id="log_text">lunAr-creator</a></p>
+    <p style='font-size:35px;'><a href="#home" class="logo_text" id="log_text">lunAr-creator</a></p>
   </div>
   <input type="checkbox" id="chk">
   <label for="chk" class="show-menu-btn" id='hamburger'>
@@ -35,6 +36,12 @@
 
 <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none"><path fill="#D8D9DE" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,277.3C480,245,600,171,720,165.3C840,160,960,224,1080,234.7C1200,245,1320,203,1380,181.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg> -->
 <script src="app.js"></script>
+
+<header id="showcase">
+  <h1>Hi. I'm lunAr-creator.</h1>
+  <p>Student, programmer and something in-between. Aspiring software engineer looking to follow CS in life.</p>
+  <a href="#about" class="button">Read More</a>
+</header>
 
 
 <div class="main" id="about" id="startchange">
