added some stuff

--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
   <a href="#about" class="button">Read More</a>
 </header>
 
+<div style="margin-bottom: 10px;"class="wrapper">
+  <div class="container">
+    <h2 class="title">Programming</h2>
+    <p class="description">At the moment my weapon of choice is Python, which I have been progressively learning for the past 2 years.</p>
+  </div>
+
+  <div class="container">
+    <h2 class="title">Designing</h2>
+    <p class="description">I enjoy designing my own UI concepts and such, generally leaning towards creative activities for fun</p>
+  </div>
+
+  <div class="container">
+    <h2 class="title">Project Vanguard</h2>
+    <p class="description">Project Vanguard is a game I am currently developing with a team of 50+ people, focused around movement and mechs</p>
+  </div>
+</div>
 
 <div class="main" id="about" id="startchange">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
@@ -62,6 +78,7 @@
 
     After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
   </p>
+
 </div>
 
 <div class="main headers" id="projects">
