--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <a href="#about" class="button">Read More</a>
 </header>
 
+
 <div style="margin-bottom: 10px;"class="wrapper">
   <div class="container">
     <h2 class="title">Programming</h2>
@@ -81,7 +82,7 @@
 
 </div>
 
-<div class="main headers" id="projects">
+<!-- <div class="main headers" id="projects">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
   <hr/>
   <div class="main-card">
@@ -131,7 +132,7 @@
   <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
   <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow" style='font-size:35px'></i></a>
   <a href="https://www.instagram.com/_somab_/" target="_blank"><i class="fab fa-instagram" style='font-size:35px;margin-left:20px;'></i></a>
-</div>
+</div> -->
 
 </body>
 </html>
