updated about me section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </label>
   <ul class="menu" id='navbar'>
     <a href="#home" id="link1" onclick="navbarFunc()">Home</a>
-    <a href="#about" id="link2" onclick="navbarFunc()">About</a>
+    <a href="#about2" id="link2" onclick="navbarFunc()">About</a>
     <a href="#projects" id="link3" onclick="navbarFunc()">Projects</a>
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
@@ -60,6 +60,30 @@
     <p class="description">Project Vanguard is a game I am currently developing with a team of 50+ people, focused around movement and mechs</p>
   </div>
 </div>
+
+<section id="about2">
+     <div class="container3">
+       <h2 style="margin-top: 90px;">About me</h2>
+       <div class="contents">
+         <img src="https://i.pinimg.com/originals/c1/0a/20/c10a208c7e8573734d74d288c3cdbb8d.jpg" alt="person image" />
+         <p>
+           Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
+
+           <br></br>
+
+           I have HTML, CSS, and Javascript skills from Highschool, including scratch and C# which got me started with programming. My weapon of choice at the moment is Python, which I have been learning for a large part of the lockdown.
+
+           <br></br>
+
+           During this time, I have made use of all the spare hours i have had and sat down and programmed. I have started and completed a Python Library and made this website!
+
+           <br></br>
+
+           After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
+         </p>
+       </div>
+     </div>
+   </section>
 
 <div class="main" id="about" id="startchange">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
