updated about me

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </header>
 
 
-<div style="margin-bottom: 10px;"class="wrapper">
+<div class="wrapper">
   <div class="container">
     <h2 class="title">Programming</h2>
     <p class="description">At the moment my weapon of choice is Python, which I have been progressively learning for the past 2 years.</p>
@@ -63,9 +63,9 @@
 
 <section id="about2">
      <div class="container3">
-       <h2 style="margin-top: 90px;">About me</h2>
+       <p style="margin-top:90px;font-size:30px;">About me</p>
        <div class="contents">
-         <img src="https://i.pinimg.com/originals/c1/0a/20/c10a208c7e8573734d74d288c3cdbb8d.jpg" alt="person image" />
+         <img src="https://i.pinimg.com/originals/66/13/d7/6613d7bc72d06c6b9859596d0253019d.jpg" alt="person image" />
          <p>
            Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
 
