--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <header id="showcase">
   <h1>Hi. I'm lunAr-creator.</h1>
   <p>Student, programmer and something in-between. Aspiring software engineer looking to follow CS in life.</p>
-  <a href="#about" class="button">Read More</a>
+  <a href="#about2" class="button">Read More</a>
 </header>
 
 
@@ -85,7 +85,7 @@
      </div>
    </section>
 
-<div class="main" id="about" id="startchange">
+<!-- <div class="main" id="about" id="startchange">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
   <hr/>
   <p style='margin-top: 20px;'>
@@ -104,7 +104,7 @@
     After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
   </p>
 
-</div>
+</div> -->
 
 <!-- <div class="main headers" id="projects">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
