--- a/index.html
+++ b/index.html
@@ -44,46 +44,48 @@
 </header>
 
 
-<div class="wrapper">
-  <div class="container">
-    <h2 class="title">Programming</h2>
-    <p class="description">At the moment my weapon of choice is Python, which I have been progressively learning for the past 2 years.</p>
-  </div>
 
-  <div class="container">
-    <h2 class="title">Designing</h2>
-    <p class="description">I enjoy designing my own UI concepts and such, generally leaning towards creative activities for fun</p>
-  </div>
-
-  <div class="container">
-    <h2 class="title">Project Vanguard</h2>
-    <p class="description">Project Vanguard is a game I am currently developing with a team of 50+ people, focused around movement and mechs</p>
-  </div>
-</div>
 
 <section id="about2">
-     <div class="container3">
-       <p style="margin-top:90px;font-size:30px;">About me</p>
-       <div class="contents">
-         <img src="https://i.pinimg.com/originals/66/13/d7/6613d7bc72d06c6b9859596d0253019d.jpg" alt="person image" />
-         <p>
-           Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
+   <div class="container3">
+     <p style="margin-top:90px;font-size:30px;">About me</p>
+     <div class="contents">
+       <img src="https://i.pinimg.com/originals/66/13/d7/6613d7bc72d06c6b9859596d0253019d.jpg" alt="person image" />
+       <p>
+         Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
 
-           <br></br>
+         <br></br>
 
-           I have HTML, CSS, and Javascript skills from Highschool, including scratch and C# which got me started with programming. My weapon of choice at the moment is Python, which I have been learning for a large part of the lockdown.
+         I have HTML, CSS, and Javascript skills from Highschool, including scratch and C# which got me started with programming. My weapon of choice at the moment is Python, which I have been learning for a large part of the lockdown.
 
-           <br></br>
+         <br></br>
 
-           During this time, I have made use of all the spare hours i have had and sat down and programmed. I have started and completed a Python Library and made this website!
+         During this time, I have made use of all the spare hours i have had and sat down and programmed. I have started and completed a Python Library and made this website!
 
-           <br></br>
+         <br></br>
 
-           After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
-         </p>
-       </div>
+         After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
+       </p>
      </div>
-   </section>
+   </div>
+ </section>
+
+ <!-- <div class="wrapper">
+   <div class="container">
+     <h2 class="title">Programming</h2>
+     <p class="description">At the moment my weapon of choice is Python, which I have been progressively learning for the past 2 years.</p>
+   </div>
+
+   <div class="container">
+     <h2 class="title">Designing</h2>
+     <p class="description">I enjoy designing my own UI concepts and such, generally leaning towards creative activities for fun</p>
+   </div>
+
+   <div class="container">
+     <h2 class="title">Project Vanguard</h2>
+     <p class="description">Project Vanguard is a game I am currently developing with a team of 50+ people, focused around movement and mechs</p>
+   </div>
+ </div> -->
 
 <!-- <div class="main" id="about" id="startchange">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
@@ -149,14 +151,14 @@
       </div>
     </li>
 </div>
-</div>
+</div> -->
 
 <br></br>
 <div class='footer'>
   <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
   <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow" style='font-size:35px'></i></a>
   <a href="https://www.instagram.com/_somab_/" target="_blank"><i class="fab fa-instagram" style='font-size:35px;margin-left:20px;'></i></a>
-</div> -->
+</div>
 
 </body>
 </html>
