trying some new stuff

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <script src="app.js"></script>
 
 <header id="showcase">
-  <h1>Hi. I'm lunAr-creator.</h1>
+  <h2 style="color: #fff;">Hi. I'm <h1 style="color: #f1c40f;">lunAr-creator</h1></h2>
   <p>Student, programmer and something in-between. Aspiring software engineer looking to follow CS in life.</p>
   <a href="#about2" class="button">Read More</a>
 </header>
