--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <a href="#about2" class="button">Read More</a>
 </header>
 
-<section id="about2">
+<!-- <section id="about2">
    <div class="container3">
      <p style="margin-top:90px;font-size:30px;">About me</p>
      <div class="contents">
@@ -61,7 +61,29 @@
        </p>
      </div>
    </div>
- </section>
+ </section> -->
+
+ <section>
+    </section>
+    <section>
+      <div class="container2 reveal">
+        <h2>Your Title</h2>
+        <div class="cards2">
+          <div class="text-card">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="text-card">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="text-card">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
  <!-- <div class="wrapper">
    <div class="container">
