--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </label>
   <ul class="menu" id='navbar'>
     <a href="#home" id="link1" onclick="navbarFunc()">Home</a>
-    <a href="#about2" id="link2" onclick="navbarFunc()">About</a>
+    <a href="#about" id="link2" onclick="navbarFunc()">About</a>
     <a href="#projects" id="link3" onclick="navbarFunc()">Projects</a>
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
@@ -36,7 +36,7 @@
 <header id="showcase">
   <h2 style="color: #fff;">Hi. I'm <h1 style="color: #f1c40f;">lunAr-creator</h1></h2>
   <p>Student, programmer and something in-between. Aspiring software engineer looking to follow CS in life.</p>
-  <a href="#about2" class="button">Read More</a>
+  <a href="#about" class="button">Read More</a>
 </header>
 
 <!-- <section id="about2">
@@ -63,23 +63,23 @@
    </div>
  </section> -->
 
- <section>
+ <section id="about">
     </section>
     <section>
       <div class="container2 reveal">
-        <h2>Your Title</h2>
+        <h2 style="margin-top:110px;">About me</h2>
         <div class="cards2">
           <div class="text-card">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3>Programming</h3>
+            <p>At the moment my weapon of choice is Python, which I have been progressively learning for the past 2 years.</p>
           </div>
           <div class="text-card">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3>Designing</h3>
+            <p>I enjoy designing my own UI concepts and such, generally leaning towards creative activities for fun</p>
           </div>
           <div class="text-card">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3>Project Vanguard</h3>
+            <p>Project Vanguard is a game I am currently developing with a team of 50+ people, focused around movement and mechs</p>
           </div>
         </div>
       </div>
