--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="container2 reveal">
+        <div class="cards2">
+          <div class="text-card">
+          <p>
+             Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
+
+             <br></br>
+
+             I have HTML, CSS, and Javascript skills from Highschool, including scratch and C# which got me started with programming. My weapon of choice at the moment is Python, which I have been learning for a large part of the lockdown.
+
+             <br></br>
+
+             During this time, I have made use of all the spare hours i have had and sat down and programmed. I have started and completed a Python Library and made this website!
+
+             <br></br>
+
+             After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
+           </p>
+          </div>
+      </div>
+    </section>
 
  <!-- <div class="wrapper">
    <div class="container">
