--- a/index.html
+++ b/index.html
@@ -70,37 +70,15 @@
         <h2 style="margin-top:110px;">About me</h2>
         <div class="cards2">
           <div class="text-card">
-            <p>At the moment my weapon of choice is Python, which I have been progressively learning for the past 2 years.</p>
+            <p>At the moment my weapon of choice is Python, which I have been progressively learning for the past 2 years. I have some experience with HTML, CSS and Javascript. </p>
           </div>
           <div class="text-card">
-            <p>I enjoy designing my own UI concepts and such, generally leaning towards creative activities for fun</p>
+            <p>I enjoy designing my own UI concepts and such, generally leaning towards creative activities for fun. I made my own Python Library over the lockdown, which generates passwords.</p>
           </div>
           <div class="text-card">
-            <p>Project Vanguard is a game I am currently developing with a team of 50+ people, focused around movement and mechs</p>
+            <p>Project Vanguard is a game I am currently developing with a team of 50+ people, focused around movement and mechs. I am currectly making UI concepts and their website</p>
           </div>
         </div>
-      </div>
-    </section>
-    <section>
-      <div class="container2 reveal">
-        <div class="cards2">
-          <div class="text-card">
-          <p>
-             Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
-
-             <br></br>
-
-             I have HTML, CSS, and Javascript skills from Highschool, including scratch and C# which got me started with programming. My weapon of choice at the moment is Python, which I have been learning for a large part of the lockdown.
-
-             <br></br>
-
-             During this time, I have made use of all the spare hours i have had and sat down and programmed. I have started and completed a Python Library and made this website!
-
-             <br></br>
-
-             After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I started suggesting ideas and contributing. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am now happy to say I am part of the team :D
-           </p>
-          </div>
       </div>
     </section>
 
@@ -189,9 +167,9 @@
 
 <br></br>
 <div class='footer'>
-  <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
-  <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow" style='font-size:35px'></i></a>
-  <a href="https://www.instagram.com/_somab_/" target="_blank"><i class="fab fa-instagram" style='font-size:35px;margin-left:20px;'></i></a>
+  <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow"></i></a>
+  <a href="https://www.instagram.com/_somab_/" target="_blank"><i class="fab fa-instagram"></i></a>
 </div>
 
 </body>
