--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </label>
   <ul class="menu" id='navbar'>
     <a href="#home" id="link1" onclick="navbarFunc()">Home</a>
-    <a href="#about" id="link2" onclick="navbarFunc()">About</a>
+    <a href="#about2" id="link2" onclick="navbarFunc()">About</a>
     <a href="#projects" id="link3" onclick="navbarFunc()">Projects</a>
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
@@ -34,13 +34,13 @@
 <script src="app.js"></script>
 
 <header id="showcase">
-  <h2 style="color: #fff;">Hi. I'm <h1 style="color: #f1c40f;">lunAr-creator</h1></h2>
+  <h2 style="color: #fff;">Hi. I'm <h1 style="color: #AEC6CF;">lunAr-creator</h1></h2>
   <p>Student, programmer and something in-between. Aspiring software engineer looking to follow CS in life.</p>
-  <a href="#about" class="button">Read More</a>
+  <a href="#about2" class="button">Read More</a>
 </header>
 
-<!-- <section id="about2">
-   <div class="container3">
+<section id="about2">
+   <div class="container2">
      <p style="margin-top:90px;font-size:30px;">About me</p>
      <div class="contents">
        <img src="https://i.pinimg.com/originals/66/13/d7/6613d7bc72d06c6b9859596d0253019d.jpg" alt="person image" />
@@ -61,9 +61,9 @@
        </p>
      </div>
    </div>
- </section> -->
+ </section>
 
- <section id="about">
+ <!-- <section id="about">
     </section>
     <section>
       <div class="container2 reveal">
@@ -80,7 +80,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
  <!-- <div class="wrapper">
    <div class="container">
