--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 </div> -->
 
-<!-- <div class="main headers" id="projects">
+<div class="main headers" id="projects">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
   <hr/>
   <div class="main-card">
@@ -163,7 +163,7 @@
       </div>
     </li>
 </div>
-</div> -->
+</div>
 
 <br></br>
 <div class='footer'>
