--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <header id="showcase">
   <h2 style="color: #fff;">Hi. I'm <h1 style="color: #AEC6CF;">lunAr-creator</h1></h2>
   <p>Student, programmer and something in-between. Aspiring software engineer looking to follow CS in life.</p>
-  <a href="#about2" class="button">Read More</a>
+  <a href="#about" class="button">Read More</a>
 </header>
 
 <div class="main" id="about" id="startchange">
-  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
+  <p style='font-size:30px;margin-top:90px;'>About Me</p>
   <hr/ style="text-align:center;">
   <p style='margin-top: 20px;'>
     Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
@@ -62,7 +62,7 @@
 </div>
 
 <div class="main headers" id="projects">
-  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
+  <p style='font-size:30px;margin-top:90px;'>Projects</p>
   <hr/>
 </div>
 
