--- a/index.html
+++ b/index.html
@@ -70,21 +70,32 @@
 
   <div class="cards flex-child-element">
     <article class="information [ card ]">
-      <span class="tag">New Content</span>
-      <h2 class="title">New content added to sorting algorithms</h2>
-      <p class="info" style="font-size:17px;">Sorting algorithms have had an update and now features another 2 explanations about bubble and merge sort</p>
-      <button class="button" onclick="window.location.href='recursive.html';">
-        <span style="font-size:15px;">Sorting Algorithms →</span>
+      <span class="tag">python, string, password-generation</span>
+      <h2 class="title">pw-gen</h2>
+      <p class="info" style="font-size:17px;">pw-gen is a library which deals with generating secure randomised passwords that are customisable and strong simultaneously.</p>
+      <button class="button" onclick="window.location.href='https://github.com/lunAr-creator/pw-gen';", target="_blank">
+        <span style="font-size:15px;">Github →</span>
       </button>
     </article>
   </div>
 
   <div class="cards flex-child-element">
     <article class="information [ card ]">
-      <span class="tag">Link</span>
-      <h2 class="title">Want to see more? Add your own stuff through Github</h2>
-      <p class="info" style="font-size:17px;">The content on this website is not limited to what we write, and we urge you to make your own by contributing to the github repo!</p>
-      <button class="button" onclick="window.location.href='https://github.com/lunAr-creator/algodat';" taget="_blank">
+      <span class="tag">html, css, js</span>
+      <h2 class="title">Project Vanguard Website</h2>
+      <p class="info" style="font-size:17px;">A website made for the titanfall 2 inspired game called Project Vanguard</p>
+      <button class="button" onclick="window.location.href='https://project-vanguard.netlify.app';" taget="_blank">
+        <span style="font-size:15px;">Live →</span>
+      </button>
+    </article>
+  </div>
+
+  <div class="cards flex-child-element">
+    <article class="information [ card ]">
+      <span class="tag">python, sockets, threading, login-system</span>
+      <h2 class="title">Meta Lipsis</h2>
+      <p class="info" style="font-size:17px;">A secure chatroom implementation in python which includes the ability of account creation (and therefore logging in), aswell as the means to host your own chatroom server, or join one.</p>
+      <button class="button" onclick="window.location.href='https://github.com/lunAr-creator/Meta-Lipsis';" taget="_blank">
         <span style="font-size:15px;">Github →</span>
       </button>
     </article>
